src/index.css
@import "tailwindcss";

body{
    /* background: #18191C; */
    
    /* background-image: linear-gradient( 126.6deg,  rgba(44,115,210,1) 3.4%, rgba(251,234,255,1) 127.9% ); */


/* background: linear-gradient(to right, #182848, #4b6cb7);  */

/* background: linear-gradient(to right, #414345, #232526);  */

  background: linear-gradient(to right,  #134e5e, #71b280); 
}


.glass-sidebar {
  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);
  
  background: rgba(255, 255, 255, 0.15);
  
  border: 1px solid rgba(255, 255, 255, 0.25);
 
  
  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.2);
  
  border-radius: 16px 0 0 16px ;
  color: #ffffff;
}

.glass-chatbox {
  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);
  
  background: rgba(255, 255, 255, 0.15);
  
  border: 1px solid rgba(255, 255, 255, 0.25);
 
  
  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.2);
  
  border-radius: 0 0 16px 0;
  color: #ffffff;
}
.glass-header {
  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);
  
  background: rgba(255, 255, 255, 0.15);
  
  border: 1px solid rgba(255, 255, 255, 0.25);
 
  
  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.2);
  
  border-radius:0  16px 0 0 ;
  color: #ffffff;
}
.glass-floating-menu {
  backdrop-filter: blur(12px);
  -webkit-backdrop-filter: blur(12px);
  
  background: rgba(255, 255, 255, 0.15);
  
  border: 1px solid rgba(255, 255, 255, 0.25);
 
  
  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.2);
  
  border-radius: 16px ;
  color: #ffffff;
}





@keyframes emerge {
  0%{
    opacity: 0;
  }
  100%{
   opacity: 1;

  }
}

.apear{
  animation: emerge 1s ease-in-out;
}











/* 
old sidebar  bg-[#34203B]
chatbox bg-[#24283B]

*/

